# university-db

./: CMakeLists.txt  Db.cpp  Db.hpp  Generator.cpp  Generator.hpp  Menu.cpp  Menu.hpp  Menu_cmds.cpp  Person.hpp  README.md  Student.hpp  db.cpp  db.hpp  enums.hpp  generator.cpp  generator.hpp  main.cpp  menu.cpp  menu.hpp  menu_cmds.cpp  test.cpp
.github/workflows/: university-db.yml
